The introduction can be reviewed. A new ending would be appriciated

--- a/bib.bib
+++ b/bib.bib
@@ -90,4 +90,18 @@
 	year={2001}
 }
 
-http://www.nature.com/jes/journal/v11/n3/full/7500165a.html
+@misc{google_indoor,
+	title = {Revamped Google Maps for iOS launches: supports iPad, indoor maps, enhanced navigation},
+	author = {9to5mac},
+	address = {\url{http://9to5mac.com/2013/07/16/revamped-google-maps-for-ios-launches-adds-ipad-indoor-maps-enhanced-navigation/}},
+	note = {Accessed: 25-2-2016},
+	date = {16 july 2013}
+	}
+
+@misc{google_dk,
+	title = {Indoor Maps availability},
+	author = {Google},
+	address = {\url{https://support.google.com/gmm/answer/1685827?hl=en&topic=1685871&ctx=topic}},
+	note = {Accessed: 25-2-2016},
+	date = {2016}
+	}
