--- a/introduction/intro.tex
+++ b/introduction/intro.tex
@@ -1,15 +1,12 @@
 \chapter{Introduction}
-In this day and age people are using most of their time indoor. This includes when they are at home or work where they are doing their daily activities and locations they are familiar with. However, people will from time to time need to move outside of the places which are familiar to them, as they might have shop at a new mall or if they are travelling with a foreign airline. This can be a negative experience if they are short on time and do not now how navigate to their desired destination. 
+In this day and age people are using most of their time indoor. This includes when they are at home or work where they are doing their daily activities  locations they are familiar with. However, people will from time to time need to move outside of the places which are familiar to them, as they might have shop at a new mall or if they are travelling with a foreign airline. This can be a negative experience if they are short on time and do not now how navigate to their desired destination. 
 
-The navigation distress is further enhanced by the fact that people spend 87\% of their time in indoor places and with buildings becoming more complex e.g. airports, malls and university campuses. This 
-, there is an increased need for indoor location systems
+The navigation distress is further enhanced by the fact that people spend 87\% of their time in indoor places and with buildings becoming more complex e.g. airports, malls and university campuses. This suggests that there is an increased need for indoor location systems as they can be used to create navigation services such as wayfinding programs and interactive maps. %yes, wayfining is in one word - Anders
 
-Indoor positioning is according to Don Dodge, developer evangelist at Google, 
+Don Dodge, developer evangelist at Google, has in his blog \textit{The Next Big Thing} stated that he believe indoor positioning and location will be one of the five technologies in which there will be the most progress over the next five years\cite{DonDIndoorIsNext}.
 \begin{quotation}
 	\textit{'...the most exciting innovation on the horizon.'}\cite{DonDNextBigThing}.
 \end{quotation}
+Google have already invested time and money indoor position systems as they have developed Google Maps which since year 2013 have supported some indoor spaces\cite{google_indoor}. As of 2016 several indoor locations in Denmark is supported by this technology, some of these places are the Copenhagen Airport, Lyngby Storcenter and The National Museum\cite{google_dk}.
 
-In his blog \textit{The Next Big Thing}, Don Dodge states that he believe indoor positioning and location will be one of the five technologies in which there will be the most progress over the next five years\cite{DonDIndoorIsNext}.
-
-Talk about it being more accurate than GPS
-%http://www.scientificamerican.com/aricle/indoor-positioning-system/
+We will explorer what other options there is for modelling indoor spaces and what kind of systems that can be made from indoor location systems.
