--- a/1sprint/cisco.tex
+++ b/1sprint/cisco.tex
@@ -20,7 +20,8 @@ The building is modelled by the use of an outline of the floor plan. The image w
 Another solution is to utilise RFID to create checkpoints throughout a building. These checkpoint are placed in doors or other room entrances and thereby utilise a RFID scanner that reports any observed devices which is equipped with a RFID tag\cite{indoor_bin}. 
 RFID works by a scanner reading an id form the passing device then sending the tag of the scanned device, the scanners own id and the time-stamp for the scan to a host computer system. By knowing where the scanners are the system can keep track of the devices\cite{RFIDjournal}.
 
-RFID requires auxiliary hardware to set up the checkpoints, and is in addition to this limited to only work at these checkpoints. It is possible to connect the checkpoints and watch users resent history and in this way track the device. Thereby it can be know if the device entered or exited the room. It can however not be know where in the room the person are which makes it difficult to track someone in a large room.
+RFID requires auxiliary hardware to set up the checkpoints, and is in addition to this limited to only work at these checkpoints. By analysing the collected data on the host system it is possible to track a device. Thereby it can be know if a device have entered or exited the room. It can however not be know where in the room it is, which makes it difficult to track someone in a large room.
+The technology are being used by air Canada, the largest airline in Canada, to track foot carts, and by doing so saving millions of dollars each year\cite{RFIDjournal}.
 
 %Maby should be moved a bit
 %This approach has two limitations. The first lies in the need of auxiliary hardware, as the environment in which the system is to operate are not necessarily equipped with the scanners, which will have to be installed. The second downside is the limitations of the system. It is only possible to get new data about a device's position when it has been observed by a scanner, which means there will be much downtime if the device is moving down a hallway or is stationary in a room. It is therefore not possible to get a precise position of a device after it has moved away from a scanner due to the direction in which the device moved in is unknown. A solution to this problem could be to use more scanners or combine the system with more technologies to improve precision and refresh rate.
