--- a/bib.bib
+++ b/bib.bib
@@ -112,3 +112,12 @@
 	note = {Accessed: 25-2-2016},
 	date = {2016}
 	}
+@article{Triangulation,
+	title={A Survey of Indoor Positioning Systems for Wireless Personal Networks},
+	author={Yanying Gu, Anthony Lo, and Ignas Niemegeers},
+	journal={IEEE COMMUNICATIONS SURVEYS & TUTORIALS},
+	volume={11},
+	number={1},
+	pages={16--16},
+	year={2009}
+}
