added some fix to intro
wanted to talk to you about some of it

--- a/introduction/intro.tex
+++ b/introduction/intro.tex
@@ -1,7 +1,7 @@
 \chapter{Introduction}
-In this day and age people are using most of their time indoor. This includes when they are at home or work where they are doing their daily activities  locations they are familiar with. However, people will from time to time need to move outside of the places which are familiar to them, as they might have shop at a new mall or if they are travelling with a foreign airline. This can be a negative experience if they are short on time and do not now how navigate to their desired destination. 
+In this day and age people are using most of their time indoor\ofx{why not use the number we know(87\%)?}. This includes \ofx{a lot of unnecessary fill}when they are at home or at work where they are doing their daily activities\ofx{Something is wrong} locations they are familiar with. However, people will from time to time have to move outside of the places which are familiar to them, as they might have to shop at a new mall or if they are travelling with a foreign airline. This can be a negative experience if they are short on time\ofx{maby not the "short on time" part} and do not know how navigate to their desired destination. 
 
-The navigation distress is further enhanced by the fact that people spend 87\% of their time in indoor places and with buildings becoming more complex e.g. airports, malls and university campuses. This suggests that there is an increased need for indoor location systems as they can be used to create navigation services such as wayfinding programs and interactive maps. %yes, wayfining is in one word - Anders
+The navigation distress is further enhanced by the fact that people spend 87\% \ofx{source}of their time in indoor places and with buildings becoming more complex e.g. airports, malls and university campuses. This suggests that there is an increased need for indoor location systems as they can be used to create navigation services such as wayfinding programs and interactive maps. %yes, wayfining is in one word - Anders
 
 Don Dodge, developer evangelist at Google, has in his blog \textit{The Next Big Thing} stated that he believe indoor positioning and location will be one of the five technologies in which there will be the most progress over the next five years\cite{DonDIndoorIsNext}.
 \begin{quotation}
