had an & in bib xD

--- a/1sprint/cisco.tex
+++ b/1sprint/cisco.tex
@@ -9,7 +9,7 @@ One of the technologies used for indoor positioning is wi-fi. When using wi-fi t
 %tre problematikker: precision, latency, refresh rate: http://blogs.cisco.com/wireless/three-dimensions-that-influence-location-quality
 
 %Should we make this a subsubsection?
-Triangulation works by having three accesspoints being able to connect to the device. The position of the accesspoints are known to the system and by calculating the distance from the device to each accesspoint, based on the signal strength, the position can be found. It is also possible to find the direction of the device, relative to the accesspoints and from this information calculate the position. The two methods can also be combined such that the system is based on signal strength and direction\cite{Triangulation}.
+Triangulation works by having three accesspoints being able to connect to the device. The position of the accesspoints are known to the system and by calculating the distance from the device to each accesspoint, based on the signal strength, the position can be found. It is also possible to find the direction of the device, relative to the accesspoints and from this information calculate the position. The two methods can also be combined such that the system is based on signal strength and direction\cite{triangulation}.
 
 %Paragraph?
 %What does google do?
