--- a/bib.bib
+++ b/bib.bib
@@ -112,10 +112,10 @@
 	note = {Accessed: 25-2-2016},
 	date = {2016}
 	}
-@article{Triangulation,
+@article{triangulation,
 	title={A Survey of Indoor Positioning Systems for Wireless Personal Networks},
 	author={Yanying Gu, Anthony Lo, and Ignas Niemegeers},
-	journal={IEEE COMMUNICATIONS SURVEYS & TUTORIALS},
+	journal={IEEE COMMUNICATIONS SURVEYS AND TUTORIALS},
 	volume={11},
 	number={1},
 	pages={16--16},
