Fixed bib and removed unused file. Fixed a section name in security

--- a/1sprint/security.tex
+++ b/1sprint/security.tex
@@ -1,4 +1,4 @@
-\section(security)
+\section{security}
 This sections goal is to secure the data that will be send from the Cisco system to the database described in figure \jfx{ref til figuren i cisco}. The alternative methods will be explored in this section and chosen a methods to implement.
 
 \subsection{Encryption}
