--- a/bib.bib
+++ b/bib.bib
@@ -5,7 +5,7 @@
   volume={33},
   number={2},
   pages={1--2},
-  year={2010}
+  date={2010}
 }
 
 @MANUAL{WhatIsIPS,
@@ -29,7 +29,9 @@
   title = {Keen On… Don Dodge: Why Indoor Location Is The Next Big Thing [TCTV]},
   author = {Andrew Keen},
   address = {\url{http://techcrunch.com/2012/09/17/keen-on-don-dodge-why-indoor-location-is-the-next-big-thing-tctv/}},
-  date = {12-09-2012},
+  date = {2012},
+  month = {09},
+  day = {17},
   note = {Accessed: 15-2-2016}
 }
 
@@ -37,7 +39,9 @@
 	title = {My 5 predictions for 2015 and beyond},
 	author = {Don Dodge},
 	address = {\url{http://dondodge.typepad.com/}},
-	date = {01-01-2015},
+	date = {2015},
+	month = {1},
+	day = {1},
 	note = {Accessed: 15-2-2016}
 }
 
@@ -45,7 +49,9 @@
 	title = {Udbredt system til trafikovervågning er ulovligt},
 	author = {Magnus Boye},
 	address = {\url{http://www.version2.dk/artikel/udbredt-trafikovervaagningssystem-er-ulovligt-76565}},
-	date = {26-01-2015},
+	date = {2015},
+	month = {1},
+	day = {26},
 	note = {Accessed: 19-2-2016}
 }
 
@@ -53,7 +59,9 @@
 	title = {Blip Systems afgoerelse},
 	author = { Danish Business Authority},
 	address = {\url{https://erhvervsstyrelsen.dk/sites/default/files/media/afgoerelse_-_blip_systems.pdf}},
-	date = {26-03-2015},
+	date = {2015},
+	month = {3},
+	day = {26},
 	note = {Accessed: 19-2-2016}
 }
 
@@ -61,7 +69,8 @@
 	title = {A Technical Review of Cisco's Wi Fi-Based Location Analytics White Paper},
 	author = {Dr. James Little and Dr. Brendan O’Brien},
 	address ={\url{http://www.cisco.com/c/en/us/products/collateral/wireless/mobility-services-engine/white_paper_c11-728970.pdf}},
-	date = {July 2013},
+	date = {2013},
+	month = {7},
 	note = {Accessed: 22-2-2016}
 }
 
@@ -69,14 +78,17 @@
   title = {Directive on privacy and electronic communications},
   author = {The European parliament},
   address = {\url{http://eur-lex.europa.eu/LexUriServ/LexUriServ.do?uri=CELEX:32002L0058:en:HTML}},
-  date = {12-07-2002},
+  date = {2002},
+  month = {7},
+  day = {12},
   note = {Accessed: 19-2-2016}
 }
 @MANUAL{IPSoverGPS,
 	title = {Help Patrons Find Their Way With Indoor Google Maps},
 	author = {Chad Mairn},
 	address = {\url{http://www.infotoday.com/cilmag/apr14/Mairn--Help-Patrons-Find-Their-Way-With-Indoor-Google-Maps.shtml}},
-	date = {12-07-2002},
+	date = {2014},
+	month = {4},
 	note = {Accessed: 24-2-2016}
 }
 
@@ -87,34 +99,39 @@
 	volume={11},
 	number={3},
 	pages={1--1},
-	year={2001}
+	date={2001}
 }
 @MANUAL{RFIDjournal,
 	title = {RFID Business Applications},
 	author = {Bob Violino},
 	address = {\url{http://www.rfidjournal.com/articles/view?1334}},
-	date = {12-07-2002},
+	date = {2005},
+	month = {1},
+	day = {16},
 	note = {Accessed: 25-2-2016}
 }
 
-@misc{google_indoor,
+@article{google_indoor,
 	title = {Revamped Google Maps for iOS launches: supports iPad, indoor maps, enhanced navigation},
 	author = {9to5mac},
 	address = {\url{http://9to5mac.com/2013/07/16/revamped-google-maps-for-ios-launches-adds-ipad-indoor-maps-enhanced-navigation/}},
 	note = {Accessed: 25-2-2016},
-	date = {16 july 2013}
+	date = {2013},
+	month = {7},
+	day = {16}
 	}
 
-@misc{google_dk,
+@article{google_dk,
 	title = {Indoor Maps availability},
 	author = {Google},
 	address = {\url{https://support.google.com/gmm/answer/1685827?hl=en&topic=1685871&ctx=topic}},
 	note = {Accessed: 25-2-2016},
 	date = {2016}
 	}
+	
 @article{triangulation,
 	title={A Survey of Indoor Positioning Systems for Wireless Personal Networks},
-	author={Yanying Gu, Anthony Lo, and Ignas Niemegeers},
+	author={Yanying Gu, Anthony Lo and Ignas Niemegeers},
 	journal={IEEE COMMUNICATIONS SURVEYS AND TUTORIALS},
 	volume={11},
 	number={1},
