--- a/introduction/intro.tex
+++ b/introduction/intro.tex
@@ -1,7 +1,7 @@
 \chapter{Introduction}
-In this day and age people are using most of their time indoor\ofx{why not use the number we know(87\%)?}. This includes \ofx{a lot of unnecessary fill}when they are at home or at work where they are doing their daily activities\ofx{Something is wrong} locations they are familiar with. However, people will from time to time have to move outside of the places which are familiar to them, as they might have to shop at a new mall or if they are travelling with a foreign airline. This can be a negative experience if they are short on time\ofx{maby not the "short on time" part} and do not know how navigate to their desired destination. 
+In this day and age people are using most of their time indoor. This includes whether they are at home or at work where they are doing their daily activities in locations they are familiar with. However, people will from time to time have to move outside of the places  familiar to them, as they might have to shop at a new mall or if they are travelling with a foreign airline. This can be a negative experience if they do not know how navigate to their desired destination. 
 
-The navigation distress is further enhanced by the fact that people spend 87\% \ofx{source}of their time in indoor places and with buildings becoming more complex e.g. airports, malls and university campuses. This suggests that there is an increased need for indoor location systems as they can be used to create navigation services such as wayfinding programs and interactive maps. %yes, wayfining is in one word - Anders
+The navigation distress is further enhanced by the fact that people spend 87\% of their time in indoor places and with buildings becoming more complex e.g. airports, malls and university campuses\cite{klepeis2001national}. This suggests that there is an increased need for indoor location systems as they can be used to create navigation services such as wayfinding programs and interactive maps. %yes, wayfining is in one word - Anders
 
 Don Dodge, developer evangelist at Google, has in his blog \textit{The Next Big Thing} stated that he believe indoor positioning and location will be one of the five technologies in which there will be the most progress over the next five years\cite{DonDIndoorIsNext}.
 \begin{quotation}
@@ -9,4 +9,4 @@ Don Dodge, developer evangelist at Google, has in his blog \textit{The Next Big 
 \end{quotation}
 Google have already invested time and money indoor position systems as they have developed Google Maps which since year 2013 have supported some indoor spaces\cite{google_indoor}. As of 2016 several indoor locations in Denmark is supported by this technology, some of these places are the Copenhagen Airport, Lyngby Storcenter and The National Museum\cite{google_dk}.
 
-We will explorer what other options there is for modelling indoor spaces and what kind of systems that can be made from indoor location systems.
+We will explore what options there is for modelling indoor spaces and what kind of systems that can be made from indoor location systems.
