--- a/bib.bib
+++ b/bib.bib
@@ -138,3 +138,11 @@
 	pages={16--16},
 	year={2009}
 }
+@article{triangulation,
+	title={Properties of Indoor Received Signal Strength for WLAN Location
+	Fingerprinting},
+	author={Kamol Kaemarungsi and Prashant Krishnamurthy},
+	journal={Telecommunications Program, School of Information Sciences, University of Pittsburgh },
+	pages={1--1},
+	year={2004}
+}
