--- a/bib.bib
+++ b/bib.bib
@@ -129,13 +129,13 @@
 	date = {2016}
 	}
 	
-@article{triangulation,
+@article{triang_n_finger,
 	title={A Survey of Indoor Positioning Systems for Wireless Personal Networks},
 	author={Yanying Gu, Anthony Lo and Ignas Niemegeers},
 	journal={IEEE COMMUNICATIONS SURVEYS AND TUTORIALS},
 	volume={11},
 	number={1},
-	pages={16--16},
+	pages={16--17},
 	year={2009}
 }
 @article{triangulation,
@@ -145,4 +145,10 @@
 	journal={Telecommunications Program, School of Information Sciences, University of Pittsburgh },
 	pages={1--1},
 	year={2004}
+}
+@MISC{cisco_overview,
+	author = {Cisco},
+	title = {Cisco Wireless Control System},
+	note = {Accessed 29-2-2016},
+	url = {\url{http://www.cisco.com/c/dam/en/us/td/i/200001-300000/270001-280000/276001-277000/276195.tif/jcr:content/renditions/276195.jpg}}
 }
