bare lidt rettelser...

--- a/1sprint/security.tex
+++ b/1sprint/security.tex
@@ -1,5 +1,5 @@
 \section{security}
-This sections goal is to secure the data that will be send from the Cisco system to the database described in figure \jfx{ref til figuren i cisco}. The alternative methods will be explored in this section and chosen a methods to implement.
+The goal of this section is to secure the data that will be send from the Cisco system to the database described in figure \jfx{ref til figuren i cisco}. Possible methods to do so will be explored and an appropriate method will be chosen to implement.
 
 \subsection{Encryption}
-Encryption is used to ensured that only the intended people will be able to extract the data, this is not entirely correct, because unwanted people will still be able to see the data and would in practice be able to decrypt it. This can be semi-counteracted by increasing the bit encryption, which will exponentially increase the time take to brute force the encryption. So when security is discussed there are to impotent factor in play,
+Encryption are used to ensured that only the intended people is able to extract data. Encrypting data is however not always enough, due to unauthorized people still being able to access the encrypted data and in practice be able to decrypt it. This can be semi-counteracted by increasing the bit encryption, which will exponentially increase the time needed to brute force the encryption. When security is discussed there are two impotent factors to consider. One: Two: \ofx{Source? and what are those two factors?}
