written some implementation

--- a/preamble_ida13.tex
+++ b/preamble_ida13.tex
@@ -195,6 +195,18 @@
 	language=C
 }
 
+\lstdefinelanguage{inc_Java}
+{
+	basicstyle=\small,
+	basicstyle=\ttfamily\scriptsize,
+	captionpos=b,
+	showstringspaces=false,					% Mellemrum i strenge enten vist eller blanke
+	numbers=left, numberstyle=\tiny,		% Linjenumre
+	tabsize=4,
+	frame=single,
+	language=Java
+}
+
 \lstdefinelanguage{our_bash}
 {
 	basicstyle=\small,
