--- a/bib.bib
+++ b/bib.bib
@@ -152,3 +152,9 @@
 	note = {Accessed 29-2-2016},
 	url = {\url{http://www.cisco.com/c/dam/en/us/td/i/200001-300000/270001-280000/276001-277000/276195.tif/jcr:content/renditions/276195.jpg}}
 }
+@MANUAL{ciscoMSE,
+	title = {Cisco Mobility Services Engine},
+	author = {Cisco},
+	address = {\url{http://www.cisco.com/c/en/us/td/docs/solutions/Enterprise/Mobility/emob73dg/emob73/ch13Loca.html#74225}},
+	note = {Accessed: 01-02-2016}
+}
