--- a/formalia/forord.tex
+++ b/formalia/forord.tex
@@ -4,7 +4,7 @@
 
 
 In the report source references are presented by a version of the Vancouver system, where sources are indicated by square brackets. An example is [1], where this is the first source in the bibliography.
-
+Lastly we will like to thank Per Mejdal Rasmussen, administrator of Cisco at AAU. 
 
 \begin{multicols}{2}
 \signature{Oliver B. Købsted}
