--- a/bib.bib
+++ b/bib.bib
@@ -155,6 +155,6 @@
 @MANUAL{ciscoMSE,
 	title = {Cisco Mobility Services Engine},
 	author = {Cisco},
-	address = {\url{http://www.cisco.com/c/en/us/td/docs/solutions/Enterprise/Mobility/emob73dg/emob73/ch13Loca.html#74225}},
-	note = {Accessed: 01-02-2016}
+	address = {\url{http://www.cisco.com/c/en/us/td/docs/solutions/Enterprise/Mobility/emob73dg/emob73/ch13Loca.html\#74225}},
+	note = {Accessed: 01-03-2016}
 }
