--- a/1sprint/cisco.tex
+++ b/1sprint/cisco.tex
@@ -2,7 +2,7 @@
 %Introduction to this
 When monitoring electronic devises in indoor spaces, a set of obstacles are presented. Some of the popular techniques that are used in outdoor environments prove themselves obsolete or severely hindered when used in an indoor environment. \sfx{source} This can be seen when working with the Global Positioning System(GPS) technology, as obstacles such as walls, roofs and floors will disrupt the signals received from satellites, leading to large imprecisions in the position measurement.
 
-This section will describe a solution to the problems associated with indoor navigation and monitoring of multiple mobile devices. \sfx{the problem isn't described clearly enough to present solutions already. Go a bit more in detail first, or say the section will present the problems and THEN solutions} Two technologies will be described for indoor positioning, WI-FI and Radio Frequency Identification, hence referred to as RFID. \sfx{use glossary on this} \sfx{bluetooth?}
+This section will describe different technologies and systems using these technologies, for indoor positioning and monitoring of multiple mobile devices. Two technologies will be described for indoor positioning, WI-FI and Radio Frequency Identification (RFID). \sfx{use glossary on this} \sfx{bluetooth?}
 
 \subsection{Wi-Fi Indoor Positioning}
 One of the most popular technologies used for indoor positioning is WI-FI\sfx{Do we need a source for this?}. When using WI-FI there are multiple methods of determining a users position, one being triangulation. In this section there will be looked further into this. \sfx{is the purpose of this section to present the technical methods of determining positions using WI-FI? We describe RSSI-based tri-lateration, but what about the others? link in comment }
@@ -40,7 +40,7 @@ At the university we have access to a sever that runs the Cisco UWN (MSE) softwa
 
 % billede af hvordan det ser ud?
 %http://www.cisco.com/c/dam/en/us/td/i/200001-300000/270001-280000/276001-277000/276195.tif/jcr:content/renditions/276195.jpg
-\begin{figure}[h]
+\begin{figure}[ht]
 	\begin{center}
 	\includegraphics[scale=1]{graphics/cisco_overview.png}
 	\caption{Overview of Cisco\cite{cisco_overview}}
