--- a/1sprint/premission.tex
+++ b/1sprint/premission.tex
@@ -1,4 +1,4 @@
-\section{Permission}
+\section{Permission} \label{sec:permission}
 By using Cisco it is possible to acquire and store peoples unique Mac-address and use this to track them. It is illegal to do so without the individuals acceptance, it will therefore be necessary to accommodate this regulation when designing the system \cite{TrafficIlligal}.
 Traffic systems using the Wi-Fi protocol in peoples smart phones have been used in Denmark. This is done by sensors registering the unique Mac-address, which were hashed and re-hashed in the sensors before being stored. Despite that it does not make it possible to track the users\cite{TrafficIlligal}, it is illegal according to the \textit{Directive on privacy and electronic communications} article 5(3)\cite{CookieDirective} which can be seen in the following quote,
 
