--- a/bib.bib
+++ b/bib.bib
@@ -164,3 +164,15 @@
 	note = {Accessed 29-2-2016},
 	url = {\url{http://www.cisco.com/c/en/us/td/docs/wireless/mse/3350/7-5/MSE_REST_API/Guide/Cisco_MSE_REST_API_Guide/Location_API.html}}
 }
+@MISC{restful_oracle,
+	author = {Oracle},
+	title = {What Are RESTful Web Services?},
+	note = {Accessed 2-3-2016},
+	url = {\url{http://docs.oracle.com/javaee/6/tutorial/doc/gijqy.html}}
+}
+@MISC{treeset,
+	author = {Oracle},
+	title = {Class TreeSet<T>},
+	note = {Accessed 2-3-2016},
+	url = {\url{https://docs.oracle.com/javase/7/docs/api/java/util/TreeSet.html}}
+}
