--- a/1sprint/cisco_usage.tex
+++ b/1sprint/cisco_usage.tex
@@ -1,8 +1,8 @@
 \section{Using Cisco on AAU}
 %husk at forklare om CPI og MSE
-The Cisco localisation and positioning system is already in use at Aalborg University. To be able to use the information from the system, we had a meeting with the administrator, during which he raised concerns for privacy, as well as a desire of being able to provide this data to future student projects. To accommodate this, it has been asked of us to build and deploy an intermediate service with the goal of obfuscating sensitive personal data, such as mac-addresses and user names. This service is intended to duplicate the functionality of the Cisco Restful API, such that the service acts as a transparent proxy. This is achieved by creating an intermediate Restful service, that simply redirects requests and processes the response before sending it back to the initial requester, as illustrated on \cref{fig:cisco_usage}.
+The Cisco localisation and positioning system is already in use at Aalborg University. To be able to use the information from the system, we had a meeting with the administrator, during which he raised concerns for privacy, because of the legality of storing person sensitive data, as mentioned in \cref{sec:permission}. Furthermore he wishes to be able to provide the location data to future student projects with ease. To accommodate this, it has been asked of us to build and deploy an intermediate service with the goal of obfuscating sensitive personal data, such as mac-addresses and user names. This service is intended to duplicate the functionality of the Cisco RESTful API, such that the service acts as a transparent proxy. This is achieved by creating an intermediate RESTful service, that simply redirects requests and processes the response before sending it back to the initial requester, as illustrated on \cref{fig:cisco_usage}.
 
-\begin{figure}[h]
+\begin{figure}[ht]
 	\begin{center}
 	\includegraphics[scale=0.9]{graphics/cisco_usage.png}
 	\caption{Cisco usage}
@@ -10,9 +10,9 @@ The Cisco localisation and positioning system is already in use at Aalborg Unive
 	\end{center} 
 \end{figure}
 
-A Restful service typically communicates using the HTTP or HTTPS protocols, and functions by receiving requests on specific URIs to which it responds in a predefined fashion. As an example we can send a HTTPS GET request to 64.103.26.61, which is a Cisco MSE test server, with the URI "/api/contextaware/v1/location/clients" and, given that we supply the correct user name and password, receive a string of data corresponding to the type of request. \sfx{Do we need a source on basic info like this?}
+A RESTful service typically communicates using the HTTP or HTTPS protocols, and functions by receiving requests for specific data resources, called URIs (Uniform Resource Identifiers) to which it responds by sending the requested data. As an example we can send a HTTPS GET request to 64.103.26.61, which is a Cisco MSE test server, with the URI "/api/contextaware/v1/location/clients" and, given that we supply the correct user name and password, receive a string of data corresponding to the type of request \cite{restful_oracle}.
 
-To create a transparent Restful service that duplicates the functionality of the Cisco Restful API, we need to make use of the same URIs as the Cisco API\cite{cisco_mse_api}. This is done with the use of the Jersey Java library, which affords the possibility of creating a HTTP server and specifying what URIs are available for a client to request.
+To create a transparent RESTful service that duplicates the functionality of the Cisco RESTful API, we need to make use of the same URIs as the Cisco API\cite{cisco_mse_api}. This is done with the use of the Jersey Java library, which affords the possibility of creating a HTTP server and specifying what URIs are available for a client to request.
 
 \begin{lstlisting}[caption={Adding a URI},label={lst:context_code},language=inc_Java]
 server.createContext("/api/contextaware/v1/location/clients", httpExchange -> {
@@ -27,6 +27,27 @@ server.createContext("/api/contextaware/v1/location/clients", httpExchange -> {
             os.close();
         });
 \end{lstlisting}
-The code example shown on \cref{lst:context_code} shows an example of how to specify a URI. The createContext() method on line 1 takes two parameters: a string for the URI and an anonymous function implementing an interface. The anonymous function taking up the rest of the example dictates what actions are performed once a connection is established. In this case some verification is performed immediately after the function call, to authenticate the user. A response is generated based on the URI; on line 4 we retrieve all clients from Cisco using the ColletAllClients() function, which also performs the task of obfuscating necessary information. The list of clients is then written though an OutputStream to the requester, as seen on lines 8 and 9. The anonoymous function terminates as the OutputStream is closed, which also serves as a termination of the HTTP connection. 
+The code example shown on \cref{lst:context_code} shows an example of how to specify a URI. The createContext() method on line 1 takes two parameters: a string for the URI and an anonymous function implementing an interface. The anonymous function taking up the rest of the example dictates what actions are performed once a connection is established. In this case some verification is performed immediately after the function call, to authenticate the user. A response is generated based on the URI; on line 4 we retrieve all clients from Cisco using the ColletAllClients() function, which also performs the task of obfuscating necessary information. The list of clients is then written though an OutputStream to the requester, as seen on lines 8 and 9. The anonymous function terminates as the OutputStream is closed, which also serves as a termination of the HTTP connection. 
 
-In order to accommodate the privacy concern, we implement some simple methods to obfuscate mac-address and user name.  % TODO: show these methods
+In order to accommodate the privacy concern, we implement some simple methods to obfuscate mac-address and user name, one of which can be seen in \cref{lst:obfuscating_mac}. It might be the case that users allow for us to store their personal information, and as such we will have to make a check to see if this has been allowed. To store this information we use a TreeSet, which guarantees $log(n)$ time cost for adding, deleting and searching \cite{treeset}. On line 2 we obtain the mac-address of the user, which is used on line 3 to perform a search in the TreeSet. If search returns empty we obfuscate the mac-address, as seen on line 4. This is done in a similar way for the user name.
+
+\begin{lstlisting}[caption={Obfuscating mac-address},label={lst:obfuscating_mac},language=inc_Java]
+Private static Client ObfuscateMacAddress(Client singleClient) {
+    String oldMacAddress = singleClient.getWirelessClientLocation().getMacAddress();
+    if (!watchList.contains(oldMacAddress)) {
+        singleClient.getWirelessClientLocation().setMacAddress(obfuscatedAddress);
+    }
+    return singleClient;
+}
+\end{lstlisting}
+
+
+With this code it is possible to create an intermediate service for the Cisco RESTful service, that intercepts the response and obfuscates certain information. To use this service, a client needs to know the IP address of the intermediate service and a login set by the Cisco administrator. To automate the requests and create a flow of data from the Cisco systems to the aStep database, we will have to build and implement a client that fetches data at an interval. The scope of the project is beyond Aalborg University, and as such we want to use more than a single Cisco system. 
+
+\begin{figure}[h]
+	\begin{center}
+	\includegraphics[scale=0.5]{graphics/ciscoSmall.pdf}
+	\caption{Cisco systems}
+	\label{fig:cisco_systems}
+	\end{center} 
+\end{figure}
